--- a/_config.yml
+++ b/_config.yml
@@ -1,15 +1,15 @@
 url: https://calvinbanning.com
-baseurl: /mg-demo-site/
+baseurl: /mg-demo-site
 
 # Site settings
-title: Awesome Title
-email: your-email@domain.com
-description: "Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description."
+title: M&G Pro Services LLC
+email: mandgproconstruction@gmail.com
+description: ""
 
 
 # Team names, titles and social links
 people:
-- name: Kay Garland
+- name: Mike Banning
   pic: 1
   position: Lead Designer
   social:
@@ -20,7 +20,7 @@ people:
     - title: stack-overflow
       url: #
 
-- name: Larry Parker
+- name: Greta Banning
   pic: 2
   position: Lead Marketer
   social:
@@ -29,17 +29,6 @@ people:
     - title: facebook
       url: #
     - title: linkedin
-      url: #
-
-- name: Diana Petersen
-  pic: 3
-  position: Lead Developer
-  social:
-    - title: twitter
-      url: #
-    - title: facebook
-      url: #
-    - title: google-plus
       url: #
 
 # Social networks usernames (many more available: google-plus, flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.)
